add fitur upload, add management user, snacks, reservation, rooms, and statistic
